[tool.poetry]
name = "pydantic-factories-mypy-issue"
version = "0.1.0"
description = ""
authors = ["Martin Roy <martin@boostsecurity.io>"]
readme = "README.md"
packages = [{include = "pydantic_factories_mypy_issue"}]

[tool.poetry.dependencies]
python = "^3.9"
mypy = "^0.930"
pydantic-factories = "^1.1.0"

[tool.mypy]
strict=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
